--- a/README.html
+++ b/README.html
@@ -15,20 +15,12 @@
 </ul>
 
 <h2 id="définition">Définition</h2>
-<p><span style="color:red;">cleanData</span> une app desktop qui permet pour nettoyer une dataset par l'utilisation des algorithmes de machine learning comme:
-<ul>
-    <li>Les algorithmes de Classification</li>
-    <li>Les algorithmes de Régression</li>
-</ul>
-pour trouver une bon résultat.
-</p>
+<p>Explication de la définition...</p>
 
 <h2 id="les-processus">Les processus</h2>
 
 <h3 id="lancer-lapplication">1. Lancer l’application</h3>
-  <p align="center">
-  <img src="./images/lancer_application.png" alt="lancer application">
- </p>
+<p>Instructions pour lancer l'application...</p>
 
 <h3 id="choisir-le-dataset">2. Choisir le dataset</h3>
 <p>Instructions pour choisir le dataset...</p>
