--- a/README.html
+++ b/README.html
@@ -15,21 +15,71 @@
 </ul>
 
 <h2 id="définition">Définition</h2>
-<p>Explication de la définition...</p>
+<p><span style="color:red;">cleanData</span> une app desktop qui permet pour nettoyer une dataset par l'utilisation des algorithmes de machine learning comme:
+<ul>
+    <li>Les algorithmes de Classification</li>
+    <li>Les algorithmes de Régression</li>
+</ul>
+pour trouver une bon résultat.
+</p>
 
 <h2 id="les-processus">Les processus</h2>
 
 <h3 id="lancer-lapplication">1. Lancer l’application</h3>
-<p>Instructions pour lancer l'application...</p>
+  <p align="center">
+  <img src="./images/lancer_application.png" alt="lancer application">
+ </p>
 
 <h3 id="choisir-le-dataset">2. Choisir le dataset</h3>
-<p>Instructions pour choisir le dataset...</p>
+  <h4>Cliquer sur ouvrir</h4>
+  <p align="center">
+  <img src="./images/choisir_dataset.png" alt="Choisir dataset">
+ </p>
+ <h4>Après le clic sur ouvrire choisir le dataset</h4>
+  <p align="center">
+  <img src="./images/ouvrir.png" alt="ouvrir.png">
+ </p>
 
 <h3 id="lecture-du-dataset">3. Lecture du dataset</h3>
-<p>Instructions pour la lecture du dataset...</p>
+  <h4>Cliquer sur le menu 'Lecture des données' et choisir l'affichage que vous voulez.</h4>
+  <p align="center">
+    <img src="./images/lecture_dataset.png" alt="lecture dataset">
+  </p>
+
+  <h4>Afficher dataset sous forme de table :</h4>
+  <p align="center">
+    <img src="./images/afficher_dataset_sous_forme_table.png" alt="sous forme table">
+  </p>
+
+  <h4>afficher les informations de dataset </h4>
+  <ul>
+    <li>le nombre des lignes</li>
+    <li>le nombre des colonnes</li>
+    <li>les attribut numériques</li>
+    <li>les attribut catégoriales</li>
+    <li>les attributs qui contiennent des valeurs manquantes</li>
+  </ul>
+  <p align="center">
+    <img src="./images/informations_dataset.png" alt="informations dataset">
+  </p>
+
+  <h4>Afficher les histogrammes</h4>
+  <h5> - les attributs catégorielles</h5>
+  <p align="center">
+    <img src="./images/afficher_histogrammes_categorielles.png" alt="les attributs catégorielle">
+  </p>
+  <h5> - les attributs continues</h5>
+  <p align="center">
+    <img src="./images/afficher_histogrammes_continues.png" alt="les attributs continues">
+  </p>
+  <h5> - Afficher la matrice de corrélation :</h5>
+  <p align="center">
+    <img src="./images/afficher_matrice_correlation.png" alt="la matrice de corrélation :">
+  </p>
+
 
 <h3 id="nettoyage-des-données">4. Nettoyage des données</h3>
-<p>Instructions pour le nettoyage des données...</p>
+
 
 <h3 id="récupérer-les-données-nettoyées">5. Récupérer les données nettoyées</h3>
 <p>Instructions pour récupérer les données nettoyées...</p>
